Bridge_server/openshift/bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tn3270-bridge
  labels:
    app: tn3270-bridge
spec:
  selector:
    app: tn3270-bridge
  ports:
    - name: http
      port: 8081
      targetPort: 8081
