Bridge_server/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web3270-bridge
  namespace: tenant-mgmt-web3270-test
  labels:
    app: web3270-bridge
spec:
  selector:
    app: web3270-bridge
  ports:
    - name: http
      port: 8081
      targetPort: 8081
